--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-contac-me></app-contac-me>
 <app-navegation-bar></app-navegation-bar>
-<router-outlet></router-outlet>
+<app-home id="home">Inicio</app-home>
+<app-about-me id="about-me">Acerca</app-about-me>
+<app-all-proyects id="proyects">proyectos</app-all-proyects>
