--- a/src/app/app/navegation-bar/navegation-bar.component.html
+++ b/src/app/app/navegation-bar/navegation-bar.component.html
@@ -1,1 +1,5 @@
-<p>navegation-bar works!</p>
+<div>
+  <div class="home"><a href="#home">Home</a></div>
+  <div class="about-me"><a href="#about-me">Acerca de mi</a></div>
+  <div class="proyects"><a href="#proyects">Proyectos</a></div>
+</div>
