Maquetado  y responsive app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<app-contac-me></app-contac-me>
-<app-navegation-bar></app-navegation-bar>
-<app-home id="home">Inicio</app-home>
-<app-about-me id="about-me">Acerca</app-about-me>
-<app-all-proyects id="proyects">proyectos</app-all-proyects>
+  <nav class="container-nav">
+    <app-navegation-bar></app-navegation-bar>   
+  </nav>
+  <article class="container-principal">
+    <app-home id="home">Inicio</app-home>
+    <app-about-me id="about-me">Acerca</app-about-me>
+    <app-all-proyects id="proyects">proyectos</app-all-proyects>
+  </article>
+  <footer class="container-contac-me">
+    <app-contac-me></app-contac-me>
+  </footer>
+
+ 
