--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
   <nav class="container-nav">
-    <app-navegation-bar></app-navegation-bar>   
+    <app-navigation-bar></app-navigation-bar>   
   </nav>
   <article class="container-principal">
     <app-home id="home">Inicio</app-home>
     <app-about-me id="about-me">Acerca</app-about-me>
-    <app-all-proyects id="proyects">proyectos</app-all-proyects>
+    <app-all-projects id="proyects">proyectos</app-all-projects>
   </article>
-  <footer class="container-contac-me">
-    <app-contac-me></app-contac-me>
+  <footer class="container-contact-me">
+    <app-contact-me></app-contact-me>
   </footer>
 
  
