--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,13 +1,13 @@
 <div class="container-principal">
-  <a class="home" href="#home">
+  <a class="nav-item" href="#home">
     <span class="text">Inicio</span>
     <img src="../../assets/home-icon.png"/>
   </a>
-  <a href="#about-me" class="about-me">
+  <a href="#about-me" class="nav-item">
     <span class="text">Acerca de mi</span>
     <img src="../../assets/profile-icon.png" />
   </a>
-  <a href="#proyects" class="projects">
+  <a href="#proyects" class="nav-item">
     <span class="text">Proyectos</span>
     <img src="../../assets/proyects-icon.png"/>
     </a
