funcionalidad barra navegacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <article class="container-principal">
     <app-home id="home">Inicio</app-home>
     <app-about-me id="about-me">Acerca</app-about-me>
-    <app-all-projects id="proyects">proyectos</app-all-projects>
+    <app-all-projects id="projects">proyectos</app-all-projects>
   </article>
   <footer class="container-contact-me">
     <app-contact-me></app-contact-me>
