barra de contacto

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .container-nav {
-  width: 10%;
+  width: 5%;
   position: fixed;
   top: 10px;
   left: 0;
@@ -7,33 +7,31 @@
 }
 
 .container-contact-me {
-  width: 10%;
+  width: 8%;
   position: fixed;
   bottom: 10px;
-  left: 0;
+  right: 0;
   height: auto;
-  border: springgreen solid 1px;
 }
+
 .container-principal {
   width: 100%;
-  padding: 0 0 0 10%;
+  padding: 0 8% 0 6%;
 }
 
 @media screen and (max-width: 580px) {
   .container-nav {
     width: 100%;
     top: 0px;
-    height: 40px;
-    border: yellow solid 1px;
+    height: 50px;
   }
-  .container-contac-me {
+  .container-contact-me {
     width: 100%;
     bottom: 0px;
-    height: 40px;
-    border: springgreen solid 1px;
+    height: 50px;
   }
   .container-principal {
     width: 100%;
-    padding: 40px 0 ;
+    padding: 50px 0;
   }
 }
