--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<section class="container-principal">
+  <div class="container-photo">
+    <img src="../../assets/photo.jpg" class="photo">
+    <img src="../../assets/icon-home.png" class="icon-home">
+  </div>
+  <div class="name">
+    <img src="../../assets/name.png">
+  </div>
+  <div class="text">FRONTEND DEVELOPER</div>
+</section>
