--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Handlee&family=Roboto:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
 :root {
   --font-roboto: "Roboto", sans-serif;
   --font-handlee: "Handlee", cursive;
+  --font-title: 'Dancing Script', cursive;
   --color-wall: #150f13;
   --color-btns: #f0ae96;
   --color-font: #F3DBCB;
