--- a/src/app/all-projects/all-projects.component.css
+++ b/src/app/all-projects/all-projects.component.css
@@ -9,20 +9,21 @@
   text-align: center;
   font-weight: 100;
   font-size: 5rem;
-  margin: 1rem 0;
+  margin: 1rem 0 1.7rem 0;
 }
 
 .container-projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  width: 85%;
-  grid-gap: 1.2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  width: 80%;
+  max-width: 600px;
+  row-gap: 3rem;
   margin: auto;
   justify-items: center;
 }
 
 .see-more {
-  width: 100%;
+  width: 70%;
   display: inline-block;
   color: var(--color-font);
   font-family: var(--font-title);
