--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 <section class="container-principal">
   <h1 class="title">Acerca de mi</h1>
   <p class="text-about-me">{{ aboutMe }}</p>
-  <h1 class="title">Habilidades tecnicas</h1>
+  <h1 class="title">Habilidades técnicas</h1>
   <div class="container-skills">
     <img
       *ngFor="let skill of urlSkills"
