--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -14,8 +14,9 @@
   text-align: center;
   font-size: 1.2rem;
   font-family: var(--font-roboto);
-  margin: 0;
+  margin: auto;
   user-select: none;
+  width: 90%;
 }
 
 .title {
