--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -56,7 +56,7 @@ img {
 }
 
 .container-skill {
-  padding: 0.5rem;
+  padding: 0 0 0.3rem 0;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -66,8 +66,8 @@ img {
   display: inline-block;
   padding: 0.3rem;
   background-color: #545448;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   border-radius: 5px;
-  margin: 0 0.5rem 0 0.5rem;
+  margin: 0.2rem 0.3rem 0 0.3rem;
   font-family: var(--font-roboto);
 }
